Leaving lab site functioning need layout finished between javascript to html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <html>
 	<head>
+		<title>Pats Cookies</title>
+		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<h4>Cookie Stand Index html is functioning</h4>
+		<h2>Pats Salmon Cookie stand</h2>
 
+		<strong>Pike Place Market Location</strong>
+		<ul id='pikepmlist'>
+
+		</ul>
+
+		<strong>SeaTac Airport Location</strong>
+		<ul id='seataclist'>
+
+		</ul>
+
+		<strong>Southcenter Mall Location</strong>
+		<ul id='soctrmlist'>
+
+		</ul>
+
+		<strong>Bellevue Square Location</strong>
+		<ul id='bellsqlist'>
+
+		</ul>
+
+		<strong>Alki Location</strong>
+		<ul id='alkilist'>
+
+		</ul>
 
 
 		<script src="app.js"></script>
