added text delivery to html

--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 	<body>
 		<h2>Pats Salmon Cookie stand</h2>
 
-		<strong>Pike Place Market Location</strong>
+		<strong>Pike Place Market</strong>
 		<ul id='pikepmlist'>
 
 		</ul>
 
-		<strong>SeaTac Airport Location</strong>
+		<strong>SeaTac Airport</strong>
 		<ul id='seataclist'>
 
 		</ul>
 
-		<strong>Southcenter Mall Location</strong>
+		<strong>Southcenter Mall</strong>
 		<ul id='soctrmlist'>
 
 		</ul>
 
-		<strong>Bellevue Square Location</strong>
+		<strong>Bellevue Square</strong>
 		<ul id='bellsqlist'>
 
 		</ul>
 
-		<strong>Alki Location</strong>
+		<strong>Alki</strong>
 		<ul id='alkilist'>
 
 		</ul>
