Style Guide updated

--- a/style-guide.html
+++ b/style-guide.html
@@ -2,56 +2,39 @@
 
 	<head>
 		<title>Salmon Style</title>
+		<link href='https://fonts.googleapis.com/css?family=Almendra+SC' rel='stylesheet' type='text/css'>
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<h4><center>Design outline ...</center></h4>
-		<h2><center>Pat's Salmon Cookies</center></h2>
+		<h1><center>SALMON COOKIES</center></h1>	
+		<h3><center>Style Guide</center></h3>
 
+	
 
-			<div id="container">
-				<div id="data">
-					Data of one color
-				</div>
+			<div id="container"><center>
+			<img src="images/salmon.png" id="Pats Salmon" width="80%" />
+			<br>
+			A pink background with moderately large "Almendra SC" font. 
+			Narrowed grey body to ease readability and subtly sneak in Seahawks colors
 
 				<div id="text">
-					Text of another
+					Text in dark blue for readability
+				</div>
+
+				<div id="data">
+					Data in bright green with dark blue accent to make it pop but keep it readable
 				</div>
 
 
 
-			</div>
 
 
-A custom Google font for highlights
-A specified standard san-serif web font for data (such as Arial, Verdana, or Helvetica)
-A specified standard serif web font for text (such as Georgia, Times, etc.)
-Specified different font colors for all three font usages
-A background color for the default page background (make sure font colors have good contrast and are readable on this background)
-A different background color for elements such boxes and tables (so make sure the font colors contrast against this well, too!)
-Anything else you'd like to add related to style. But remember: simplicity, clarity,  and consistency are good things in design.
+			</div></center>
 
 
 
 
-
-
-
-
-
-
-Seattle Seahawk Colors ...
-dark blue #002244
-lime green #69BE28
-Grey #A5ACAF
-
-
-data
-text
-highlights
-
-different font ...
 	</body>
 
 </html>
