cleaning directory pre merge

--- a/style-guide.html
+++ b/style-guide.html
@@ -13,7 +13,7 @@
 	
 
 			<div id="container"><center>
-			<img src="images/salmon.png" id="Pats Salmon" width="80%" />
+			<img src="images/salmon.png" id="Pats Salmon" height="80%" />
 			<br>
 			A pink background with moderately large "Almendra SC" font. 
 			Narrowed grey body to ease readability and subtly sneak in Seahawks colors
