Pair programming: added form to sales.html

--- a/sales.html
+++ b/sales.html
@@ -31,6 +31,23 @@
 
 		</ul>
 
+		<form>
+			<fieldset>
+				<legend>New Location:</legend>
+				New location: <br />
+				<input type="text" name="place">
+				<br />
+				Minimum customers per hour: <br />
+				<input type="text" name="min">
+				<br />
+				Maximum customers per hour: <br />
+				<input type="text" name="max">
+				<br />
+				Average cookies per customer: <br />
+				<input type="text" name="avg">
+				<br />
+			</fieldset>
+		</form>
 
 		<script src="app.js"></script>
 	</body>
