--- a/sales.html
+++ b/sales.html
@@ -5,6 +5,14 @@
 
 	<body>
 		<h2>Pats Salmon Cookie stand</h2>
+			<table id="tableHerePlz">
+	
+			</table>
+
+
+
+
+
 
 		<strong>Pike Place Market</strong>
 		<ul id='pikepmlist'>
