Fri afternoon, leaving lab, form in progress

--- a/sales.html
+++ b/sales.html
@@ -10,53 +10,27 @@
 	
 			</table>
 
-
-
-
-
-
-		<strong>Pike Place Market</strong>
-		<ul id='pikepmlist'>
-
-		</ul>
-
-		<strong>SeaTac Airport</strong>
-		<ul id='seataclist'>
-
-		</ul>
-
-		<strong>Southcenter Mall</strong>
-		<ul id='soctrmlist'>
-
-		</ul>
-
-		<strong>Bellevue Square</strong>
-		<ul id='bellsqlist'>
-
-		</ul>
-
-		<strong>Alki</strong>
-		<ul id='alkilist'>
-
-		</ul>
-
 		<form>
 			<fieldset>
-				<legend>New Location:</legend>
-				New location: <br />
-				<input type="text" name="place">
+				<legend>New / Update Information</legend>
+				Location: <br />
+				<input type="text" id="location">
 				<br />
 				Minimum customers per hour: <br />
-				<input type="text" name="min">
+				<input type="text" id="min">
 				<br />
 				Maximum customers per hour: <br />
-				<input type="text" name="max">
+				<input type="text" id="max">
 				<br />
 				Average cookies per customer: <br />
-				<input type="text" name="avg">
+				<input type="text" id="avg">
 				<br />
+				<button id="clickIt">Update</button>
 			</fieldset>
 		</form>
+
+
+
 
 		<script src="app.js"></script>
 	</body>
