Finally got table appending as it should

--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,6 @@
 	<body>
 		<h2>Pats Salmon Cookie stand</h2>
 			<table id="tableHerePlz">
-	
 			</table>
 
 		<form>
@@ -25,12 +24,9 @@
 				Average cookies per customer: <br />
 				<input type="text" id="avg">
 				<br />
-				<button id="clickIt">Update</button>
+				<input type="reset" id="clickIt" value="Update"></input>
 			</fieldset>
 		</form>
-
-
-
 
 		<script src="app.js"></script>
 	</body>
