Add fish logo to sales page

--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,10 @@
 	</head>
 
 	<body>
-		<h2>Pats Salmon Cookie stand</h2>
+		<h2>Pats Salmon Cookies</h2>
+		<img src="images/salmon.png" height="160" />
+
+
 			<table id="tableHerePlz">
 			</table>
 
@@ -27,6 +30,7 @@
 				<input type="reset" id="clickIt" value="Update"></input>
 			</fieldset>
 		</form>
+		
 
 		<script src="app.js"></script>
 	</body>
